# FOTH_LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  camera.h  frag.frag  main.cpp  shader.cpp  shader.h  vert.vert
Src/: CMakeLists.txt  frag.frag
